# Dados-futebol

./: .gitignore  Dockerfile  README.md  etl-script.py  etl_script.py  main.py  main.tf  mise.toml  pyproject.toml
.github/workflows/: deploy-glue.yaml  deploy-lambda.yaml  deploy.yaml
assets/: mermaid.mmd
dashboard/: app.py  requirements.txt
infra/: compute.tf  iam.tf  storage.tf  triggers.tf  versions.tf
