[project]
name = "dadosfut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.32",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "s3fs>=0.4.2",
    "streamlit>=1.53.1",
]
